--- a/src/App.scss
+++ b/src/App.scss
@@ -517,3 +517,7 @@ text-shadow: 0px 4px 4px #000000;
 .card-slider__next {
   right: 10px;
 }
+.userIcon {
+  height: fit-content;
+  width: fit-content;
+}
