--- a/src/components/signup/signup.scss
+++ b/src/components/signup/signup.scss
@@ -27,24 +27,33 @@
 .signup-col2{
     flex-basis: 40%;
     position: fixed;
-   right: 100px;
-   top: 15%;
-   width: 500px;
-   height: 500px;
+   right: 10px;
+   top: 10vh;
    
     
 }
 .signup-col2 img{
     width: 100%;
     height: 100%;
+    width: 40vw;
+
 }
 .signup-form{
     background: #FFFFFF;
-box-shadow: 28px 0px 50.4863px rgba(0, 0, 0, 0.17);
-border-radius: 32px;
-padding: 5vh 5vw;
+    box-shadow: 28px 0px 50.4863px rgba(0, 0, 0, 0.17);
+    border-radius: 32px;
+    padding: 5vh 5vw;
+    width: 100%;
+    min-width: 300px;
 }
-
+.approval{
+    padding: 5vh;
+}
+.signupbtn{
+    width: 100%;
+    padding: 1vh;
+    margin: 5vh 0;
+}
 
 
 
@@ -87,5 +96,19 @@ padding: 5vh 5vw;
     .cmp{
         color:  #B199CF;
         font-weight: bold;
+    }
+}
+
+@media only screen and (max-width: 750px){
+    .signup-col2{
+        display: none;
+    }
+    .signup-col1{
+        flex-basis: 100%;
+    }
+}
+@media only screen and (min-width: 750px){
+    .signup-col2 svg{
+        
     }
 }
