--- a/src/App.scss
+++ b/src/App.scss
@@ -27,13 +27,40 @@ ul{
 .logo-img {
   height: 75px;
   width: 200px;
+  display: none;
 }
 .logo-img img {
   width: 100%;
   height: 100%;
 }
 .logo-head {
-  display: none;
+  display: flex;
+    flex-direction: column;
+    // align-items: center;
+    justify-content: center;
+    h2{
+      color: #4B006E;
+      font-family: 'Poppins',sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 2.5rem;
+      margin: 0;
+      padding: 0;
+  }
+  h6{
+      display: flex;
+      font-family: 'Poppins',sans-serif;
+      padding: 0;
+      margin: 0;
+      font-style: normal;
+      font-weight: lighter;
+      font-size: 1rem;
+  }
+  .cmpy{
+      color:  #B199CF;
+      font-weight: bold;
+      
+  }
 }
 .menu ul {
   display: flex;
