--- a/src/components/faqs/faqs.css
+++ b/src/components/faqs/faqs.css
@@ -1,27 +1,27 @@
-.nav{
+.navbar{
     background-color: blueviolet;
     width: 100%;
     height: 8vh;
-    display: flex;
+    /* display: flex; */
     align-items: center;
 }
-.nav li {
+.navbar li {
     list-style-type: none;
     padding: 0 1.5vw;
 }
-.nav li a{
+.navbar li a{
     text-decoration: none;
     color: white;
     font-size: 1.2rem;
 }
-.header{
+.faqheader{
     background-image: linear-gradient(rgba(0,0,0,0.5) ,rgba(0,0,0,0.1)), url(img/human.jpg);
     width: 100%;
     height: 90vh;
     background-size: 100%;
     background-size: cover;
 }
-.header h1{
+.faqheader h1{
     color: white;
     font-size: 3rem;
     text-align: center;
@@ -65,7 +65,7 @@
     font-size: 19px;
 }
 .contactus{
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     padding: 5vh 0;
     background: rgb(87, 186, 211);
