--- a/src/App.scss
+++ b/src/App.scss
@@ -61,9 +61,15 @@ ul{
       font-weight: bold;
       
   }
+  .menu{
+    display: flex;
+    align-items: center;
+
+  }
 }
 .menu ul {
   display: flex;
+  align-items: center;
   list-style: none;
 }
 .menu ul li {
@@ -77,9 +83,14 @@ ul{
   backdrop-filter: blur(2px);
   
 }
-.menu ul li a:hover{
+.menu ul li a:hover, .userIcon:hover{
     color: #ce65f8;
-    transition: color 1s;
+    transition: color .5s,transform .5s;
+
+}
+.userIcon:hover{
+  transform: scale(1.5);
+  cursor: pointer;
 }
 .leftArrowStyle{
   position: absolute;
@@ -313,10 +324,15 @@ color: #000000;
 
 }
 .chakachak{
-  display: grid;
-  place-items: center;
   height: 50vh;
   background-position: 0 0;
+}
+.chakachak-inner{
+  display: grid;
+  place-items: center;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.354);
 }
 .chakachak h1{
   font-family: 'Bentham';
@@ -547,4 +563,5 @@ text-shadow: 0px 4px 4px #000000;
 .userIcon {
   height: fit-content;
   width: fit-content;
+  margin-left: 10px;
 }
