--- a/src/components/admin/newadmin.scss
+++ b/src/components/admin/newadmin.scss
@@ -1,11 +1,14 @@
 .newadmin{
     background-color: #B199CF;
+    // position: fixed;
+    width: 100%;
+    height: 100%;
 }
 .newadmin-body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5vh 2vw;
+    padding: 3.8vh 2vw;
     margin: 0;
     
 }
