manage user admin dashboard

--- a/src/components/newsletter/newsletter.scss
+++ b/src/components/newsletter/newsletter.scss
@@ -4,7 +4,7 @@
 .newsletter{
     display: flex;
     padding: 5vh 10vw;
-    background: #B2E3FF;
+    background: #C3ACCE;
 }
 .newsletter-col1{
     flex-basis: 50%;
