--- a/src/App.scss
+++ b/src/App.scss
@@ -351,6 +351,12 @@ text-shadow: 0px 4px 4px #000000;
   place-items: center;
   width: 100%;
   padding: 20vh 1vw;
+  padding-bottom: 5vh;
+  :hover{
+    .CircularImages{
+      transform: scale(1.2);
+    }
+  }
 }
 .CircularBg{
   display: grid;
@@ -363,6 +369,7 @@ text-shadow: 0px 4px 4px #000000;
   min-height: 500px;
   min-width: 500px;
   width: 50vw;
+  
 }
 .CenterImg{
   text-align: center;
@@ -402,9 +409,9 @@ text-shadow: 0px 4px 4px #000000;
   transition: transform 1s;
 
 }
-.CircularImages:hover{
-  transform: scale(1.2);
-}
+// .CircularImages:hover{
+//   transform: scale(1.2);
+// }
 
 .CircularImages img{
   height: 100px;
@@ -442,7 +449,9 @@ text-shadow: 0px 4px 4px #000000;
 .Services{
   display: block;
   padding: 10vh 5vw;
+  padding-bottom: 5vh;
 }
+
 .Services-body{
   width: 100%;
   display: grid;
@@ -456,7 +465,7 @@ text-shadow: 0px 4px 4px #000000;
   height: 300px;
 }
 .Serivces-head{
-  padding: 5vh 0;
+  padding:  5vh 0;
 
 }
 .Serivces-head h1{
