--- a/src/components/admin/admin.scss
+++ b/src/components/admin/admin.scss
@@ -83,10 +83,13 @@
     padding: 1vh 2vw;
     border-radius: 20px;
     margin-top: 2vh;
+    height: none;
     width: 100%;
     ul{
         padding: 0;
         margin: 0;
+        height: 100%;
+        width: 100%;
     }
     li{
         padding: 0;
