--- a/src/components/userDashboard/userDashboardComponent/userProfile.scss
+++ b/src/components/userDashboard/userDashboardComponent/userProfile.scss
@@ -18,6 +18,7 @@
     }
 }
 .profile-body{
+    padding-top: 5vh;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-gap: 1vh 5vw;
