--- a/src/components/productOrder/productOrder.scss
+++ b/src/components/productOrder/productOrder.scss
@@ -71,11 +71,13 @@
 .orderContainer{
     border-radius: 34px;
     width: 100%;
-    height: 200vh;
+    height: 100%;
     background: var(--neutral-100, #FFF);
     box-shadow: 0px 98px 66px 0px rgba(19, 18, 66, 0.02), 1px 4px 104px 0px rgba(20, 20, 43, 0.04), 0px 54px 54px 0px rgba(74, 58, 255, 0.02);
     overflow: scroll;
     padding: 5vh 1.5vw;
+    padding-bottom: 1vh;
+    // position: relative;
 
 }
 .col2-row1{
@@ -137,4 +139,97 @@
     border: none;
     text-shadow: 1px 1px grey;
     background: none;
+}
+
+.service-block{
+    padding: 0 2vw;
+    color: #525252;
+    .service-price{
+        display: flex;
+        align-items: center;
+        padding-top: 1vh;
+        p{
+            padding: 0 1vw;
+            margin: 0;
+        }
+    }
+    h2{
+        font-size: 1.4rem; 
+        padding: 0; 
+        margin: 0;
+    }
+    h3{
+        font-size: 1rem;
+        color: #848484;
+        padding: 0;
+        margin: 0;
+        p{
+            padding: 0;
+            margin: 0;
+        }
+    }
+
+}
+
+.summary{
+    // position: absolute;
+    // z-index: 999;
+    // bottom: 5vh;
+    // right: 4vw;
+    float: right;
+    margin-top: 7vh;
+    margin-right: 2vw;
+    // margin-bottom: 5vh;
+
+}
+.summary-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    h4{
+        font-size: 1rem;
+        padding-right: 1vw;
+        color: #525252;
+    }
+    h5{
+        color: #6F6C90;
+        font-size: 1.2rem;
+    }
+
+}
+.total{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #4B006E;
+    padding: 2vh 0 ;
+    padding-bottom: 0;
+    margin-top: 1vh;
+    h2{
+        font-size: 1.5rem;
+        color: #525252;
+    }
+}
+.confirm-back-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    // bottom: 1px;
+    // left: 30%;
+    padding-top: 3vh;
+    // position: sticky;
+    .confirm-btn{
+        border: 1px solid #4B006E;
+        background: #4B006E;
+        color: #FFF;
+       
+        padding: 1vh 1vw;
+        margin: 0 1vw;
+        border-radius: 20px;
+        &:hover{
+            color: #4B006E;
+            background: white;
+        }
+    }
 }
