--- a/src/components/productOrder/productOrder.scss
+++ b/src/components/productOrder/productOrder.scss
@@ -233,3 +233,35 @@
         }
     }
 }
+
+
+.msg-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;    
+    padding: 5vh 5vw;
+    h1{
+        padding: 0;
+        margin: 0;
+        font-size: 1.7rem;
+    }
+}
+.msg-row1{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    p{
+        padding: 0;
+        margin: 0;
+        padding-bottom: 5vh;
+        padding-top: 3px;
+        font-size: .9rem;
+        color: #848484;
+    }
+}
+.ok-btn{
+    padding: 0 5vw;
+}
