--- a/src/components/faqs/faqs.scss
+++ b/src/components/faqs/faqs.scss
@@ -1,35 +1,20 @@
-.navbar{
-    background-color: blueviolet;
-    width: 100%;
-    height: 8vh;
-    /* display: flex; */
-    align-items: center;
-}
-.navbar li {
-    list-style-type: none;
-    padding: 0 1.5vw;
-}
-.navbar li a{
-    text-decoration: none;
-    color: white;
-    font-size: 1.2rem;
-}
+
 .faqheader{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    /* background-image: linear-gradient(rgba(0,0,0,0.5) ,rgba(0,0,0,0.1)), url(img/human.jpg); */
+    justify-content: center; 
+    // background-image: linear-gradient(rgba(0,0,0,0.5) ,rgba(0,0,0,0.1)), url(img/human.jpg);
     width: 100%;
-    height: 90vh;
-    background-size: 100%;
-    background-size: cover;
+    height: 60vh;
+    background-size: 100% 100%;
+    background-attachment: fixed;
 }
 .faqheader h1{
-    color: black;
-    font-size: 3rem;
+    color: rgb(255, 255, 255);
+    font-size: 4rem;
     text-align: center;
-    padding-top: 17%;
+    padding-top: 3%;
 }
 .searchbar{
     width: 100%;
@@ -37,10 +22,15 @@
     display: flex;
     border-radius: 60px;
     padding: 8px 18px;
-    background: rgba(255,255,255,0.2);
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 10px #4b006e;
     margin-top: 3vh;
     align-items: center;
     justify-content: center;
+    ::placeholder{
+        color: #4b006e;
+        font-size: 1rem;
+    }
 }
 .searchbar input{
     background: none;
@@ -48,8 +38,8 @@
     border: 0;
     outline: none;
     padding: 2px 15px;
-    font-size: 17px;
-    color: white;
+    font-size: 1.1rem;
+    color: #4b006e;
 }
 ::placeholder{
     color: #cac7ff;
@@ -62,14 +52,18 @@
 
 }
 #content{
-    text-align: center;
+    // text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
     padding: 10vh 5vw;
+    .faq-container{
+        width: 50vw;
+        margin: 2vh 0;
+    }
 }
 
-#content p{
-    padding: 2vh;
-    font-size: 19px;
-}
 .contactus{
     display: flex;
     align-items: center;
