--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ ul{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5vh 5vw;
+  padding: 3vh 5vw;
 
   box-shadow: 0px 0px 10px gray;
 }
@@ -36,7 +36,7 @@ ul{
 .logo-head {
   display: flex;
     flex-direction: column;
-    // align-items: center;
+    align-items: center;
     justify-content: center;
     h2{
       color: #4B006E;
@@ -70,6 +70,8 @@ ul{
 .menu ul {
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
   list-style: none;
 }
 .menu ul li {
