--- a/src/App.scss
+++ b/src/App.scss
@@ -139,19 +139,23 @@ ul{
     flex-direction: column;
     position: absolute;
     top: 50%;
-    left: 20%;
-    right: 20%;
+    left: 10%;
+    right: 10%;
+
     z-index: 999;
     justify-content: center;
     align-items: center;
 }
 .searchHead h1{
-  font-family: 'Bentham';
+  font-family: 'Poppins',sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 5rem;
+    font-size: 6rem;
     line-height: 115px;
     text-align: center;
+    padding: 0;
+    margin: 0;
+    text-shadow: -1px .5px 5px white;
     color: #fff;
 }
 .search input{
@@ -197,14 +201,14 @@ ul{
   padding: 10vh 0;
 }
 .process-head h1{
-  font-family: 'Inria Sans';
+  font-family: 'Poppins',sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 58.6214px;
 line-height: 70px;
 text-align: center;
 color: #1B262C;
-text-shadow: 0px 3.66384px 3.66384px #786C6C;
+// text-shadow: 0px 3.66384px 3.66384px #786C6C;
 }
 .process-row{
   display: grid;
@@ -241,7 +245,17 @@ text-shadow: 0px 3.66384px 3.66384px #786C6C;
   // margin: 5vh 0;
   font-weight: 700;
   color: white;
+  // color: rgb(75, 0, 110)76;
   box-shadow: 1px 5px 20px rgba(130, 130, 130, 0.97);
+}
+.justTry-btn{
+  background: rgba(100, 100, 1, 0.7);
+  border-radius: 10px ;
+  border: .5px groove yellow;
+  color: white;
+  padding: 1vh 2vw;
+  font-size: 1.3rem;
+  
 }
 .process-text h4{
   padding-top: 2.5vh;
@@ -262,12 +276,13 @@ text-shadow: 0px 3.66384px 3.66384px #786C6C;
 
 .product-image-slider-head{
   position: absolute;
-    top: 20%;
+    top: 15%;
     left: 10%;
-    right: 20%;
+    right: 10%;
     z-index: 999;
-    // justify-content: center;
-    // align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .product-image-slider-head h1{
   font-family: 'Kumbh Sans';
@@ -291,24 +306,24 @@ text-shadow: 0px 4px 4px #000000;
   height: 100%;
 }
 .why-klara-col2{
-  padding: 5vh 2vw;
+  padding: 4vh 2vw;
 }
 .why-klara-col2 h1{
-  font-family: 'Inria Sans';
+  font-family: 'Poppins',sans-serif;
 font-style: normal;
 font-weight: 700;
-font-size: 2.6rem;
+font-size: 2.4rem;
 line-height: 58px;
 text-align: left;
 color: #1E1E1E;
 padding-bottom: 5vh;
 }
 .why-klara-col2 p{
-  font-family: 'Kumbh Sans';
+  font-family: 'Poppins',sans-serif;
 font-style: normal;
-font-weight: 500;
+font-weight: lighter;
 text-align: justify;
-font-size: 1.1rem;
+font-size: .8rem;
 line-height: 25px;
 padding-left: .3vw;
 
@@ -316,13 +331,17 @@ color: #000000;
 
 }
 .why-klara-col2 h4{
-  font-family: 'Kumbh Sans';
+  display: flex;
+  font-family: 'Poppins',sans-serif;
 font-style: normal;
+float: right;
 font-weight: 700;
-font-size: 1.3rem;
+  font-size: 1rem;
 line-height: 25px;
 padding-top: 2vh;
 color: #000000;
+padding: 0;
+margin: 0;
 
 }
 .chakachak{
@@ -337,10 +356,10 @@ color: #000000;
   background: rgba(0, 0, 0, 0.354);
 }
 .chakachak h1{
-  font-family: 'Bentham';
+  font-family: 'Poppins',sans-serif;
 font-style: normal;
 font-weight: 400;
-font-size: 128px;
+font-size: 7rem;
 line-height: 154px;
 text-align: center;
 color: #FFFFFF;
@@ -471,7 +490,7 @@ text-shadow: 0px 4px 4px #000000;
 
 }
 .Serivces-head h1{
-  font-family: 'Inria Sans';
+  font-family: 'Poppins',sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 3rem;
@@ -494,7 +513,7 @@ text-shadow: 0px 4px 4px #000000;
   align-items: center;
 }
 .Services-card-title h3{
-  font-family: 'Kumbh Sans';
+  font-family: 'Poppins',sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 1.7rem;
