--- a/src/App.scss
+++ b/src/App.scss
@@ -476,14 +476,18 @@ text-shadow: 0px 4px 4px #000000;
 .Services-body{
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(400px, 1fr));
-  grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
+  grid-gap: 5vh 10vw;
   // place-items: center;
 }
 .Services-card{
   display: block;
   width: auto;
   height: 300px;
+  &:hover{
+    transform: scale(1.1);
+    filter: drop-shadow(1px 1px 10px #4b006e);
+  }
 }
 .Serivces-head{
   padding:  5vh 0;
