--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -1,8 +1,8 @@
 .loader{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.272);
+    // background: rgba(0, 0, 0, 0.272);
 }
