--- a/src/components/admin/admin_component/user.scss
+++ b/src/components/admin/admin_component/user.scss
@@ -20,6 +20,12 @@
 .user-profile,.edit-btn{
     flex: 1;
 }
+.emp{
+    // justify-content: space-around;
+    flex: 0;
+}
+.emp-profile{
+}
 .user-profile-name{
     flex: 1.5;
     margin-left: 2vw;
