--- a/src/components/faqs/faqs.scss
+++ b/src/components/faqs/faqs.scss
@@ -69,7 +69,7 @@
     align-items: center;
     justify-content: center;
     /* padding: 5vh 0; */
-    background: rgb(87, 186, 211);
+    background: #4b006e9d;
 }
 .callguy img{
     width: auto;
