--- a/src/App.scss
+++ b/src/App.scss
@@ -249,14 +249,19 @@ color: #1B262C;
   box-shadow: 1px 5px 20px rgba(130, 130, 130, 0.97);
 }
 .justTry-btn{
-  background: rgba(100, 100, 1, 0.7);
-  border-radius: 10px ;
-  border: .5px groove yellow;
+  background: linear-gradient(135deg,rgba(75, 0, 110, 0.62),rgb(75, 0, 110,.8),rgb(255, 255, 255,.9));
+  border-radius: 30px ;
+  border: .5px groove white;
   color: white;
   padding: 1vh 2vw;
   font-size: 1.3rem;
-  
+  box-shadow: 1px 1px 20px whitesmoke;
+  transition: background 2s;
+  &:hover{
+    background: linear-gradient(-135deg,rgba(75, 0, 110, 0.62),rgb(75, 0, 110,.8),rgb(255, 255, 255,.9));    
+  }
 }
+
 .process-text h4{
   padding-top: 2.5vh;
   font-size: 1.3rem;
@@ -486,7 +491,7 @@ text-shadow: 0px 4px 4px #000000;
   height: 300px;
   &:hover{
     transform: scale(1.1);
-    filter: drop-shadow(1px 1px 10px #4b006e);
+    filter: drop-shadow(1px 1px 10px #4b006e93);
   }
 }
 .Serivces-head{
