--- a/src/components/aboutUs/aboutUs.scss
+++ b/src/components/aboutUs/aboutUs.scss
@@ -60,3 +60,28 @@
     line-height: 30px;
     color: rgba(0, 0, 0, 0.94);
 }
+
+
+@media only screen and (max-width: 400px){
+    .aboutUs-body{
+        padding: 2vh 5vw;
+        margin: 2.5vh 0;
+    }
+    .body-container{
+        display: block;
+        padding: 2.5vh 1vw;
+    }
+    .aboutUs-col1 img{
+        height: 120px;
+        width: 130px;
+    }
+    .aboutUs-col2{
+        margin: 0;
+        padding: 0 4vw;
+        p{
+            padding: 0;
+            font-size: .8rem;
+            line-height: 20px;
+        }
+    }
+}
