--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,6 +3,9 @@
 .footerMain {
   background: #36213e;
   padding: 2vh 5vw;
+  .logo-head{
+    padding: 5vh 0;
+  }
 
   .logo-footer {
     display: flex;
@@ -16,7 +19,8 @@
   }
   .section-middle {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    overflow: hidden;
     .about {
       width: fit-content;
       display: flex;
@@ -87,5 +91,25 @@
         }
       }
     }
+  }
+}
+@media only screen and (max-width: 400px){
+  .section-middle{
+    .about{
+      padding: 1vh 0;
+      h3{
+        padding: 0;
+      }
+    }
+  }
+  .play-store{
+    flex-direction: column;
+    padding: 0;
+    img{
+      width: 100%;
+    }
+  }
+  .social-icon{
+    font-size: 1.5rem;
   }
 }
