--- a/src/components/reviews/reviews.scss
+++ b/src/components/reviews/reviews.scss
@@ -43,7 +43,7 @@ color: #1E1E1E;
     display: flex;
 }
 .review-head-img{
-    flex-basis: 20%;
+    flex-basis: 10%;
     width: 100%;
     height: 100%;
     padding: 0 .1vw;
@@ -51,8 +51,8 @@ color: #1E1E1E;
 .review-head-img img{
     height: 100%;
     width: 100%;
-    min-height: 70px;
-    min-width: 70px;
+    min-height: 50px;
+    min-width: 50px;
     border-radius: 50%;
     // padding: 0 1vw;
 
@@ -96,4 +96,9 @@ color: #1E1E1E;
     font-size: .8rem;
     padding-right: 2.5vw;
     overflow: auto;
+}
+@media only screen and (max-width: 400px){
+    .Reviews{
+        display: none;
+    }
 }
