--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,15 @@ ul{
   cursor: pointer;
 
 }
+.menu_dialog{
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+
 .sliderStyle{
   height:80vh;
   width: 100%;
@@ -606,6 +615,7 @@ text-shadow: 0px 4px 4px #000000;
 }
 .menu-icon{
   display: none;
+  position: relative;
 }
 .menu-btn{
   padding: .5vh ;
@@ -614,10 +624,39 @@ text-shadow: 0px 4px 4px #000000;
   border: none;
   border-radius: 10px;
 }
+.menu-List{
+  position: absolute;
+  z-index: 999999;
+  top: 6vh;
+  // right: 0;
+  background: #4b006e;
+  // padding: 1vh 3vw;
+  ul{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+
+  li{
+    color: white;
+    font-size: .8rem;
+    background: rgba(255, 255, 255, 0.813);
+    width: 30vw ;
+    margin: .5vh 2vw;
+    margin-right: -2vw;
+    padding: 0 1vw;
+
+  }
+}
+
+}
 
 
 
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 600px){
 .chakachak{
   height: 27vh;
   overflow: hidden;
@@ -678,6 +717,7 @@ text-shadow: 0px 4px 4px #000000;
 }
 .process-row{
   padding: 0 5vw;
+  grid-template-columns: repeat(auto-fit,minmax(100%, 1fr));
 }
 .process-img{
   height: 80px;
@@ -720,4 +760,28 @@ text-shadow: 0px 4px 4px #000000;
     }
   }
 }
+.Services-body{
+  grid-template-columns: repeat(auto-fit,minmax(140px, 1fr));
+
+}
+.Services-card{
+  height: 120px;
+  
+}
+.Services-card-title h3{
+  font-size: 1rem;
+} 
+.Services{
+  padding: 0 5vw;
+}
+// .process-row{
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+// }
+// .process-text{
+//   p{
+//     display: none;
+//   }
+// }
 }
