--- a/src/components/servicesProvider/serviceProvider.scss
+++ b/src/components/servicesProvider/serviceProvider.scss
@@ -68,7 +68,7 @@
 .detail{
     height: 100%;
     width: 100%;
-    background: rgba(0, 0, 0, 0.527);
+    // background: rgba(0, 0, 0, 0.692);
     text-align: center;
     // overflow: scroll;
     padding: 2vh 1vw;
@@ -77,7 +77,7 @@
     p{
         padding: 0;
         margin: 0;
-        height: 100%;
+        // height: 100%;
         font-size: .8rem;
         // overflow: scroll;
     }
@@ -90,5 +90,29 @@
     }
     .card-detail{
         height: 270px;
+        overflow: scroll;
+    }
+}
+
+
+@media only screen and (max-width: 600px){
+    .Ser-provider{
+        padding: 0 5vw;
+    }
+    .card{
+        height: 200px;
+    }
+    .Slide:hover{
+        .card-detail{
+            height: 200px;
+            &::-webkit-scrollbar{
+                display: none;
+            }
+        }
+    }
+    .card-name,.card-detail{
+        h3{
+            font-size: 1rem;
+        }
     }
 }
