--- a/src/components/faqs/faqs.scss
+++ b/src/components/faqs/faqs.scss
@@ -99,3 +99,22 @@
 .text h3 a:hover{
     color: blue;
 }
+
+@media only screen and (max-width: 600px){
+    .faqheader{
+        height: 30vh;
+        // background-position: 0 -10%;
+        background-attachment: initial;
+        h1{
+            font-size: 2rem;
+        }
+    }
+    #content{
+        padding: 2.5vh 5vw;
+        .faq-container{
+            width: 100%;
+            margin: 1vh 0;
+        }
+
+    }
+}
