--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -4,7 +4,9 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
+    height: 100%;
+    position: fixed;
 }
 .login-box{
     min-width: 350px;
@@ -133,4 +135,9 @@
 }
 .social-icon:hover svg{
     transform: scale(1.1);
+}
+@media only screen and (max-width: 600px){
+    .login-box{
+        margin: 0 5vw;
+    }
 }
