--- a/src/components/newsletter/newsletter.scss
+++ b/src/components/newsletter/newsletter.scss
@@ -56,13 +56,13 @@
 
 @media only screen and (max-width: 600px){
     .newsletter{
-        padding: 5vh 5vw;
+        padding: 5vh 3vw;
         input{
             padding: .6vh 1vw;
         }
     }
     .newsletter-col1 img{
-        width: 150px;
+        width: 130px;
     }
     .newsletter-col2{
         padding: 0;
@@ -72,6 +72,8 @@
         
     }
     .subscribe-btn{
-        padding: .6vh 2vw;
+        padding: .6vh 1vw;
+        font-size: 1rem;
+        width: auto;
     }
 }
