--- a/src/App.scss
+++ b/src/App.scss
@@ -687,7 +687,11 @@ text-shadow: 0px 4px 4px #000000;
   justify-content: flex-end;
 }
 .header{
-  padding: 1vh 3vw;
+  padding: .5vh 3vw;
+  position: sticky;
+  top: 0;
+  z-index: 99999999999;
+  background: rgba(255, 255, 255, 0.929);
 }
 .divStyle{
   height: 40vh;
